data/derived/comb/progs/unify/prog3425.ml.out
Characters 71-75:
  | VarX -> Format.printf "%float" VarX;;
                                   ^^^^
Error: This expression has type expr but an expression was expected of type
         float
